fix: border and spacings

--- a/src/index.css
+++ b/src/index.css
@@ -484,6 +484,7 @@ footer .copyright {
     background-color: #e2faf6;
     text-align: left;
     padding:0 1em;
+    z-index: 1;
     
   }
 
